--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('./assets/two.jpeg') no-repeat center center/cover;
+            background: url('./assets/two_1.webp') no-repeat center center/cover;
             z-index: -1;
         }
 
